# liminal-dashboard

./: .gitignore  README.md  package.json  tailwind.config.ts
.lovable/: plan.md
Frontend1/: package-lock.json  package.json
Frontend1/src/: App.css  App.jsx
Frontend1/src/components/: AIModal.jsx  LoginPage.jsx  RightPanel.jsx  Sidebar.jsx  Topbar.jsx
Frontend1/src/hooks/: useTheme.js
backend/: .env  README.md  check_bd.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: auth.py  routes.py
backend/app/assets/models/ppo_agent/: data  policy.optimizer.pth  policy.pth  system_info.txt
backend/app/core/: config.py  database.py  models.py  security.py
backend/app/schemas/: __init__.py  cas.py  chat.py  explainer.py  simulation.py  stock.py  stress.py  user.py  watchlist.py
backend/app/services/: analytics_service.py  cas_parser.py  chatbot_service.py  explainer_service.py  news_service.py  simulation_service.py  stock_service.py  stress_test_service.py  watchlist_service.py
frontend/: index.html  package-lock.json  package.json  playwright-fixture.ts  playwright.config.ts  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AppShell.tsx  AssetList.tsx  BalanceCard.tsx  BottomNav.tsx  DashboardHeader.tsx  Dock.css  Dock.tsx  StressTestBanner.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: api.ts
frontend/src/pages/: AIInsights.tsx  Analytics.tsx  Chat.tsx  Dashboard.tsx  HerWealth.tsx  Index.tsx  Login.tsx  NotFound.tsx  Portfolio.tsx  Profile.tsx  (+4 more)
src/: App.tsx  index.css
src/components/: AppShell.tsx  AssetList.tsx  BalanceCard.tsx  BottomNav.tsx  DashboardHeader.tsx  StressTestBanner.tsx
src/pages/: AIInsights.tsx  Index.tsx  Profile.tsx  Sandbox.tsx
(+5 files in other folders)
