[project]
name = "liminal-backend"
version = "0.1.0"
description = "FastAPI backend for Liminal AI"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "aiokafka>=0.13.0",
  "aiosqlite>=0.22.1",
  "alembic>=1.18.4",
  "anthropic>=0.94.0",
  "asyncpg>=0.31.0",
  "bcrypt==4.0.1",
  "email-validator>=2.3.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.1",
  "numpy>=2.4.4",
  "pandas>=3.0.2",
  "passlib[bcrypt]>=1.7.4",
  "pydantic[email]>=2.9.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.2.2",
  "python-jose[cryptography]>=3.5.0",
  "redis>=7.4.0",
  "scikit-learn>=1.8.0",
  "shap>=0.51.0",
  "sqlalchemy>=2.0.49",
  "uvicorn[standard]>=0.30.0",
  "google-genai>=1.72.0",
  "pymupdf>=1.27.2.2",
  "python-multipart>=0.0.26",
  "yfinance>=1.2.1",
  "groq>=0.30.0,<1.0.0",
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-google-genai>=2.0.0",
  "langchain-groq>=0.3.0",
  "stable-baselines3>=2.5.0",
  "sb3-contrib>=2.5.0",
  "gymnasium>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
